rpcbind: upgrade to 1.2.6

--- a/trunk/user/rpcbind/rpcbind-1.2.6/README
+++ b/trunk/user/rpcbind/rpcbind-1.2.6/README
@@ -1,3 +1,5 @@
 This release was a native source release from Sun.
 It has been ported from FreeBSD 5.2.1 to GNU/Linux in 2004.
 
+Please send bug reports to: libtirpc-devel@lists.sourceforge.net
+or linux-nfs@vger.kernel.org 
